deploy/overlay/test/query-service/ing.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edv-qs
spec:
  ingressClassName: nginx
  rules:
    - host: query-service.test.nermdev.io
      http:
        paths:
        - path: /api/auth/login
          pathType: Prefix
          backend:
            service:
              name: query-service
              port:
                number: 80
        - path: /api/auth/register
          pathType: Prefix
          backend:
            service:
              name: query-service
              port:
                number: 80
        - path: /api/elections
          pathType: Prefix
          backend:
            service:
              name: query-service
              port:
                number: 80
        - path: /api/my-elections
          pathType: Prefix
          backend:
            service:
              name: query-service
              port:
                number: 80
